- Fix two bugs concerning Discovery of CSV tables:   Sep_char default is now ',' like when discovery is not used   If data_charset is UTF8, column names retrieved from the header   are no longer converted to UTF8 considering they already are (MDEV-7421) modified:   storage/connect/ha_connect.cc